@@ -37,7 +37,7 @@ extern "C" {
 
 int vips__rad_israd( const char *filename );
 int vips__rad_header( const char *filename, VipsImage *out );
-int vips__rad_load( const char *filename, VipsImage *out );
+int vips__rad_load( const char *filename, VipsImage *out, gboolean readbehind );
 
 int vips__rad_save( VipsImage *in, const char *filename );
 
