@@ -12,6 +12,7 @@
 - add @point subsample mode to vips_subsample()
 - im_contrast_surface() deprecated: it was slower than calling conv a few
   times
+- radiance load supports sequential read
 
 18/10/13	started 7.36.3
 - fix compiler warnings in ubuntu 13.10
